--- a/GoIT/markup/lesson5/Cadastre/css/style.css
+++ b/GoIT/markup/lesson5/Cadastre/css/style.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'helvetica_neue';
     src: url('../fonts/helveticaneue-thin-webfont.eot');
-    src: url('../fonts/helveticaneue-thin-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/helveticaneue-thin-webfont.woff2') format('woff2'),
-         url('../fonts/helveticaneue-thin-webfont.woff') format('woff'),
+    src: url('../fonts/helveticaneue-thin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/helveticaneue-thin-webfont.woff2') format('woff2'),
+         url('../fonts/helveticaneue-thin-webfont.woff') format('woff'),
          url('../fonts/helveticaneue-thin-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
@@ -30,6 +30,11 @@ body{
 	overflow: hidden;
 	background-image: url(../img/bg_header.png);
 	height: 36px;
+}
+
+.wrapper{
+	margin: 0 auto;
+	width: 1215px;
 }
 
 .header li, .header img, .header p{
@@ -111,7 +116,60 @@ body{
 }
 
 .facebook_btn{
+	line-height: 34px;
 	padding: 36px 0 32px 0;
+	width: 276px;
+	margin: 0 auto;
+}
+
+.facebook_btn a{
+	display: block;
+	background: rgba(61,88,157,1);
+	background: -moz-linear-gradient(top, rgba(61,88,157,1) 0%, rgba(44,65,120,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(61,88,157,1)), color-stop(100%, rgba(44,65,120,1)));
+	background: -webkit-linear-gradient(top, rgba(61,88,157,1) 0%, rgba(44,65,120,1) 100%);
+	background: -o-linear-gradient(top, rgba(61,88,157,1) 0%, rgba(44,65,120,1) 100%);
+	background: -ms-linear-gradient(top, rgba(61,88,157,1) 0%, rgba(44,65,120,1) 100%);
+	background: linear-gradient(to bottom, rgba(61,88,157,1) 0%, rgba(44,65,120,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d589d', endColorstr='#2c4178', GradientType=0 );
+	color: white;
+	text-align: left;
+	text-decoration: none;
+	font-size: 16px;
+	border-top: 1px solid #778ab4;
+	border-radius: 4px;
+}
+
+.facebook_btn a:hover{
+	background: rgba(44,65,120,1);
+	background: -moz-linear-gradient(top, rgba(44,65,120,1) 0%, rgba(61,88,157,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(44,65,120,1)), color-stop(100%, rgba(61,88,157,1)));
+	background: -webkit-linear-gradient(top, rgba(44,65,120,1) 0%, rgba(61,88,157,1) 100%);
+	background: -o-linear-gradient(top, rgba(44,65,120,1) 0%, rgba(61,88,157,1) 100%);
+	background: -ms-linear-gradient(top, rgba(44,65,120,1) 0%, rgba(61,88,157,1) 100%);
+	background: linear-gradient(to bottom, rgba(44,65,120,1) 0%, rgba(61,88,157,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2c4178', endColorstr='#3d589d', GradientType=0 );
+}
+
+.facebook_btn a img{
+	vertical-align: middle;
+	margin-top: -3px;
+}
+
+.form .facebook_btn span{
+    display: inline;
+    font-size: inherit;
+    font-weight: bold;
+    padding: 0 6px 0 6px;
+
+}
+
+.form .facebook_btn span:nth-of-type(1){
+	padding-left: 34px;
+}
+
+.form .facebook_btn span:nth-of-type(3){
+	padding-left: 20px;
 }
 
 .ou_line{
@@ -155,18 +213,44 @@ body{
 	vertical-align:top;
 }
 
-.form .send_btn input{
+.form input[type="submit"]{
 	margin: 23px 0 22px 0;
-	padding: 0;
-	width: initial;
+	width: 151px;
+	height: 37px;
+	border: 1px solid #6bb8e7;
+	border-radius: 3px;
+	background: rgba(80,175,219,1);
+	background: -moz-linear-gradient(top, rgba(80,175,219,1) 0%, rgba(46,121,196,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(80,175,219,1)), color-stop(100%, rgba(46,121,196,1)));
+	background: -webkit-linear-gradient(top, rgba(80,175,219,1) 0%, rgba(46,121,196,1) 100%);
+	background: -o-linear-gradient(top, rgba(80,175,219,1) 0%, rgba(46,121,196,1) 100%);
+	background: -ms-linear-gradient(top, rgba(80,175,219,1) 0%, rgba(46,121,196,1) 100%);
+	background: linear-gradient(to bottom, rgba(80,175,219,1) 0%, rgba(46,121,196,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50afdb', endColorstr='#2e79c4', GradientType=0 );
+	color: white;
+	font-family: Tahoma, Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+}
+
+.form input[type="submit"]:hover{
+	background: rgba(46,121,196,1);
+	background: -moz-linear-gradient(top, rgba(46,121,196,1) 0%, rgba(80,175,219,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(46,121,196,1)), color-stop(100%, rgba(80,175,219,1)));
+	background: -webkit-linear-gradient(top, rgba(46,121,196,1) 0%, rgba(80,175,219,1) 100%);
+	background: -o-linear-gradient(top, rgba(46,121,196,1) 0%, rgba(80,175,219,1) 100%);
+	background: -ms-linear-gradient(top, rgba(46,121,196,1) 0%, rgba(80,175,219,1) 100%);
+	background: linear-gradient(to bottom, rgba(46,121,196,1) 0%, rgba(80,175,219,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2e79c4', endColorstr='#50afdb', GradientType=0 );
+	cursor: pointer;
 }
 
 .form span{
+	font-size: 11px;
 	display: block;
 	line-height: 15px;
-	font-size: 11px;
 }
 
 .form span:last-child{
-	padding-bottom: 20px;
+    padding-bottom: 20px;
 }
