--- a/GoIT/markup/js_11-12/css/style.css
+++ b/GoIT/markup/js_11-12/css/style.css
@@ -1,11 +1,37 @@
+body {
+    background-color: #bbbbbb;
+}
+
 .wrapper {
     margin: 40px auto;
-    width: 700px;
+    padding: 10px;
+    width: 720px;
+    background-color: #ffffff;
     border: 1px solid dimgrey;
     border-radius: 5px;
     -webkit-box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.6);
     -moz-box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.6);
     box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.6);
+}
+
+.change-tmpl {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 10px;
+    width: 60px;
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    border: 1px solid dimgrey;
+    border-radius: 5px;
+    transition: 0.1s;
+}
+
+.change-tmpl:hover {
+    color: white;
+    background-color: grey;
 }
 
 h1{
@@ -15,7 +41,38 @@ h1{
 }
 
 .user-info {
+    position: relative;
     text-align: center;
+}
+
+.menu-wrapper {
+    float: left;
+    margin: 10px 15px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.6);
+}
+
+h2 {
+    margin: 10px;
+    text-align: center;
+    font-size: 18px;
+}
+
+.menu-link {
+    display: block;
+    margin: 18px;
+    padding: 10px;
+    border: 1px solid grey;
+    text-decoration: none;
+    color: #000000;
+    background-color: #e4e4e4;
+    transition: 0.2s;
+}
+
+.menu-link:hover {
+    color: #ffffff;
+    background-color: #bbbbbb;
 }
 
 .user-change {
@@ -59,15 +116,13 @@ h1{
     clear: both;
 }
 
-.user-name {
-    margin: 10px;
-    text-align: center;
-    font-size: 18px;
-}
-
 .user-icon {
     margin: 10px;
-    width: 150px;
+    height: 150px;
+}
+
+.user-description {
+    height: 60px;
 }
 
 .carousel-list {
