--- a/GoIT/markup/js_19-20/client_src/scss/partials/header.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/partials/header.scss
@@ -1,30 +1,33 @@
 .header-upper {
   // margin-bottom: 38px;
   // height: 110px;
-  // line-height: 36px;
+  line-height: 37px;
   padding: 37px 0;
   overflow: hidden;
 }
 
 .logo {
+  background:transparent url('../img/logo.png') left top no-repeat;
   float: left;
+  padding-left: 52px;
   line-height: 100%;
 }
 
-.logo__img {
+.logo__header {
 
 }
 
+.logo__text {
 
+}
 
-.socials {
+.menu-socials {
   float: right;
-  line-height: 100%;
+  height: 37px;
 }
 
-.socials__item {
-  display: inline-block;
-  text-decoration: none;
+.menu-socials__item {
+  @include menu-item;
   width: 33px;
   color: #cccccc;
 
@@ -57,4 +60,34 @@
 .skype:before {
   @include fa(skype);
 }
+
+.menu-main__item {
+  @include menu-item;
+  line-height: 56px;
+  padding: 0 40px;
+
+  &:last-child {
+    float: right;
+    padding: 0;
+  }
+}
+
+.menu-main__search {
+  margin: 6px;
+  padding: 0 12px;
+  line-height: 44px;
+  border: 1px solid black;
+
+  &:after {
+    @include fa;
+    @include fa(search);
+    @include fa(left);
+  }
+
+  & input {
+    border: 0;
+  }
+}
+
+
 
