--- a/GoIT/markup/js_19-20/client_src/template/header.html
+++ b/GoIT/markup/js_19-20/client_src/template/header.html
@@ -1,27 +1,28 @@
 <header class="wrapper">
     <div class="header-upper">
         <a href="#" class="logo">
-            <img src="img/logo.png" class="logo__img">
-            <h1>Build Home</h1>
-            <p>Industrial Theme</p>
+            <h1 class="logo__header">Build Home</h1>
+            <p class="logo__text">Industrial Theme</p>
         </a>
-        <ul class="socials">
-            <li class="socials__item facebook"></li>
-            <li class="socials__item twitter"></li>
-            <li class="socials__item rss"></li>
-            <li class="socials__item linkedin"></li>
-            <li class="socials__item skype"></li>
+        <ul class="menu-socials">
+            <li class="menu-socials__item facebook"></li>
+            <li class="menu-socials__item twitter"></li>
+            <li class="menu-socials__item rss"></li>
+            <li class="menu-socials__item linkedin"></li>
+            <li class="menu-socials__item skype"></li>
         </ul>
     </div>
-    <nav class="menu">
-        <ul class="main-menu">
-            <li class="main-menu__item"><a href="#">Home</a></li>
-            <li class="main-menu__item"><a href="#">Features</a></li>
-            <li class="main-menu__item"><a href="#">Services</a></li>
-            <li class="main-menu__item"><a href="#">News</a></li>
-            <li class="main-menu__item"><a href="#">Shop</a></li>
-            <li class="main-menu__item">
-                <input type="text" name="" id="" placeholder="Search">
+    <nav>
+        <ul class="menu-main">
+            <li class="menu-main__item"><a href="#">Home</a></li>
+            <li class="menu-main__item"><a href="#">Features</a></li>
+            <li class="menu-main__item"><a href="#">Services</a></li>
+            <li class="menu-main__item"><a href="#">News</a></li>
+            <li class="menu-main__item"><a href="#">Shop</a></li>
+            <li class="menu-main__item">
+                <div class="menu-main__search">
+                    <input type="text" name="" id="" placeholder="Search">
+                </div>
             </li>
         </ul>
     </nav>
